[tool.poetry]
name = "clarify-bot"
version = "0.1.0"
description = ""
authors = ["Kam Lasater <ckl@seekayel.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
bs4 = "^0.0.2"
ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
